--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cardo:400i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
+    <link rel="stylesheet" href="css/slick.css">
 </head>
 <body>
     <section class="banner h-100 position-relative">
     	<header class="header down fixed-top" id="index.html">
     		<nav class="container navbar navbar-expand-lg navbar-light text-uppercase navigation">
     		 	<a href="#index.html">
-    		 		<img src="img/logo.png" alt="logo" class="logo">
+    		 		<img src="img/Logo.png" alt="logo" class="logo">
     			</a>
     		   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     		       <span class="navbar-toggler-icon"></span>
@@ -102,6 +103,38 @@
     	</div>
     </section>
 
+    <section class="news" id="news">
+    	<div class="container  my-container">
+    		<h2 class="text-uppercase news__lat text-center">Latest news</h2>
+    		<div class="row">
+    			<div class="col-lg-4 col-md-12">
+    				<img class="q" src="img/news1.jpg">
+    					<div class="news__bg">
+    						<h4 class="news__title">See The Unmatched Beauty Of The Great. Lakes.</h4>
+    						<p class="news__text">Free directories: directories are perfect for customers that are... searching for...</p>
+
+    					</div>
+    			</div>
+    			<div class="col-lg-4 col-md-12">
+    				<img class="q" src="img/news2.jpg">
+    					<div class="news__bg">
+    						<h4 class="news__title">Effective Advertising Pointers.</h4>
+    						<p class="news__text">Free directories: directories are perfect for customers that are... searching for a </p>
+    						
+    					</div>
+    			</div>
+    			<div class="col-lg-4 col-md-12">
+    				<img  class="q"src="img/news3.jpg">
+    					<div class="news__bg">
+    						<h4 class="news__title">Hypnotize Yourself Into The Ghost.Of Christmas Future</h4>
+    						<p class="news__text">Having a home based business is a wonderful asset to your life...</p>
+    						
+    					</div>
+    			</div>
+    		</div>
+    	</div>
+    </section>
+
     <section class="section" id="map">
     	<div class="form"></div>
     </section>
@@ -111,7 +144,7 @@
 		<div class="row">
 			<div class="col-md-6 col-sm-4">
 				<a href="#index.html">
-	 				<img src="img/logo.png" alt="logo" class="logo">
+	 				<img src="img/Logo.png" alt="logo" class="logo">
 				</a>
 			</div>
 			<div class="col-md-6 col-sm-4">
